respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Shipment_Item_Line_Disbursement__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Allocated_Cargo_Line_Currency__c</fullName>
        <formula>Amount__c *  Conversion_Rate_to_Cargo_Line_Currency__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Allocated (Cargo Line Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Allocated Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate_to_Cargo_Line_Currency__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Conversion Rate to Cargo Line Currency</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disbursement_Concept__c</fullName>
        <formula>Shipment_Disbursement__r.Disbursment_Concept__c</formula>
        <label>Disbursement Concept</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount_Exc__c</fullName>
        <formula>Shipment_Disbursement__r.Invoice_Amount_Exc__c</formula>
        <label>Invoice Amount (Exc)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <formula>Shipment_Disbursement__r.Invoice_Date__c</formula>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item_Code__c</fullName>
        <formula>Shipment_Item_Line__r.Item_Code__c</formula>
        <label>Item Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <formula>Shipment_Item_Line__r.Item_Name__r.Name</formula>
        <label>Item Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_Amount__c</fullName>
        <formula>Shipment_Item_Line__r.Sell_Origin_Amount__c</formula>
        <label>Origin Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outstanding_Balance__c</fullName>
        <formula>Shipment_Item_Line__r.Outstanding_Balance__c</formula>
        <label>Outstanding Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <formula>Shipment_Disbursement__r.Payment_Amount__c</formula>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <formula>Shipment_Disbursement__r.Payment_Date__c</formula>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Ref__c</fullName>
        <formula>Shipment_Disbursement__r.Payment_Ref__c</formula>
        <label>Payment Ref</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Disbursement__c</fullName>
        <description>master-detail specifying disbursement reference number where cargo line will be included. filled in automatically</description>
        <label>Disbursement</label>
        <referenceTo>Shipment_Disbursement__c</referenceTo>
        <relationshipLabel>Shipment Cargo Lines / Disbursements</relationshipLabel>
        <relationshipName>Shipment_Item_Lines_Disbursements</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Shipment_Item_Line__c</fullName>
        <description>master-detail specifying cargo line reference number to be included on disbursement</description>
        <label>Shipment Cargo Line</label>
        <referenceTo>Shipment_Line__c</referenceTo>
        <relationshipLabel>Shipment Cargo Lines / Disbursements</relationshipLabel>
        <relationshipName>Shipment_Item_Lines_Disbursements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Supplier_Account__c</fullName>
        <formula>Shipment_Disbursement__r.Account__r.Name</formula>
        <label>Supplier Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Invoice_Ref__c</fullName>
        <formula>Shipment_Disbursement__r.Invoice_Ref__c</formula>
        <label>Supplier Invoice Ref</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Origin_Price__c</fullName>
        <formula>Shipment_Item_Line__r.Unit_Origin_Sell_Price__c</formula>
        <label>Unit Origin Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Units_Shipped__c</fullName>
        <formula>Shipment_Item_Line__r.Units_Shipped__c</formula>
        <label>Units Shipped</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Shipment Cargo Line / Disbursement</label>
    <nameField>
        <label>Shipment Cargo Line / Disbursement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipment Cargo Lines / Disbursements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>